feat(plugins): add deletePolicy
enable retaining Helm release on remote cluster
when deletePolicy is set to retain
Default is delete, where deleting the Plugin results
in the helm release being uninstalled
