# docs/reference/api/openapi.yaml
@@ -1117,6 +1117,15 @@ components:
                 clusterName:
                   description: ClusterName is the name of the cluster the plugin is deployed to. If not set, the plugin is deployed to the greenhouse cluster.
                   type: string
+                deletionPolicy:
+                  default: Delete
+                  description: |-
+                    DeletionPolicy defines how Helm Releases created by a Plugin are handle upon deletion of the Plugin.
+                    Supported values are "Delete" and "Retain". If not set, defaults to "Delete".
+                  enum:
+                    - Delete
+                    - Retain
+                  type: string
                 displayName:
                   description: |-
                     DisplayName is an optional name for the Plugin to be displayed in the Greenhouse UI.
@@ -1375,6 +1384,15 @@ components:
           properties:
             clusterName:
               description: ClusterName is the name of the cluster the plugin is deployed to. If not set, the plugin is deployed to the greenhouse cluster.
+              type: string
+            deletionPolicy:
+              default: Delete
+              description: |-
+                DeletionPolicy defines how Helm Releases created by a Plugin are handle upon deletion of the Plugin.
+                Supported values are "Delete" and "Retain". If not set, defaults to "Delete".
+              enum:
+                - Delete
+                - Retain
               type: string
             displayName:
               description: |-
